foreach: Fix detection of container type

BUG: 354404